--- a/test/fixtures/notifications.yml
+++ b/test/fixtures/notifications.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  order_id: 1
+  message: MyString
   user_id: 1
-  friend: 1
-  user_id: 
+  users_id: 
+  orders_id: 
 
 two:
+  order_id: 1
+  message: MyString
   user_id: 1
-  friend: 1
-  user_id: 
+  users_id: 
+  orders_id: 
