finish groups and order details

--- a/test/fixtures/orderusers.yml
+++ b/test/fixtures/orderusers.yml
@@ -2,10 +2,14 @@
 
 one:
   user_id: 1
-  gname: MyString
+  order_id: 1
+  status: MyString
   user_id: 
+  order_id: 
 
 two:
   user_id: 1
-  gname: MyString
+  order_id: 1
+  status: MyString
   user_id: 
+  order_id: 
