--- a/test/fixtures/notifications.yml
+++ b/test/fixtures/notifications.yml
@@ -1,15 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  order_id: 1
-  message: MyString
-  user_id: 1
-  users_id: 
-  orders_id: 
+  recipient_id: 1
+  actor_id: 1
+  read_at: 2016-05-04 18:26:30
+  action: MyString
+  notifiable_id: 1
+  notifiable_type: MyString
 
 two:
-  order_id: 1
-  message: MyString
-  user_id: 1
-  users_id: 
-  orders_id: 
+  recipient_id: 1
+  actor_id: 1
+  read_at: 2016-05-04 18:26:30
+  action: MyString
+  notifiable_id: 1
+  notifiable_type: MyString
